<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/date"/>
            <TextView android:id="@+id/date_value"
                android:layout_marginStart="@dimen/fab_margin"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/compression"/>
            <TextView android:id="@+id/compression_value"
                android:layout_marginStart="@dimen/fab_margin"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/preload"/>
            <TextView android:id="@+id/preload_value"
                android:layout_marginStart="@dimen/fab_margin"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/rebound"/>
            <TextView android:id="@+id/rebound_value"
                android:layout_marginStart="@dimen/fab_margin"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/fab_margin">
            <TextView android:text="@string/pinion"/>
            <TextView android:id="@+id/pignon_value"
                android:layout_marginStart="@dimen/fab_margin"/>
            <TextView android:text="@string/crown"
                android:layout_marginStart="@dimen/fab_margin"/>
            <TextView android:id="@+id/crown_value"
                android:layout_marginStart="@dimen/fab_margin"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>